fixed spacing between projects and tech

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,4 +1,6 @@
 .parentProjectContainer {
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 .title {
